sandbox-codebase/objects/heymarket__List_View_Sync__c/heymarket__List_View_Sync__c.object-meta.xml
<CustomObject>
    <description>ListView Sync will store the configuration per ListView which will be synced between Salesforce ListView and HM Contact List.</description>
    <label>ListView Sync</label>
    <nameField>
        <label>ListView Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ListViews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>