sandbox-codebase/objects/heymarket__List_View_Sync__c/fields/heymarket__HM_List_Id__c.field-meta.xml
<CustomField>
    <fullName>heymarket__HM_List_Id__c</fullName>
    <description>Heymarket List Id.</description>
    <inlineHelpText>Heymarket List Id.</inlineHelpText>
    <label>Heymarket List Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>