sandbox-codebase/objects/heymarket__List_View_Sync__c/fields/heymarket__HM_List_Name__c.field-meta.xml
<CustomField>
    <fullName>heymarket__HM_List_Name__c</fullName>
    <description>Heymarket List Name</description>
    <label>Heymarket List Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>