sandbox-codebase/objects/heymarket__List_View_Sync__c/fields/heymarket__SF_List_Name__c.field-meta.xml
<CustomField>
    <fullName>heymarket__SF_List_Name__c</fullName>
    <description>Salesforce List Name</description>
    <label>Salesforce List Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>