sandbox-codebase/objects/heymarket__List_View_Sync__c/fields/heymarket__SF_List_View_Id__c.field-meta.xml
<CustomField>
    <fullName>heymarket__SF_List_View_Id__c</fullName>
    <description>Salesforce ListView Id</description>
    <label>Salesforce ListView Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>