sandbox-codebase/objects/heymarket__List_View_Sync__c/fields/heymarket__Sync_Object__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Sync_Object__c</fullName>
    <label>Sync Object</label>
    <referenceTo>heymarket__Sync_Object__c</referenceTo>
    <relationshipLabel>ListView Sync Mappings</relationshipLabel>
    <relationshipName>List_View_Sync_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>